[gd_scene load_steps=3 format=3 uid="uid://dfv1kye5w8lqi"]

[ext_resource type="Theme" uid="uid://cpfhmr6sdpb1p" path="res://addons/gov_plugin/gov_theme.tres" id="1_6i8pk"]
[ext_resource type="Script" path="res://addons/gov_plugin/govenor.gd" id="1_35wkb"]

[node name="Govenor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_6i8pk")
script = ExtResource("1_35wkb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Options"

[node name="OrganizeBtn" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "Organize"
popup/item_0/id = 0
popup/item_1/text = "By Noded"
popup/item_1/id = 1
popup/item_2/text = "By SGElse"
popup/item_2/id = 2

[node name="Refresh" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
text = "Refresh"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Current State"

[node name="CurrentNodedFolderInfo" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "49 items :: 135777 bytes"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProjectsRoot" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "By Noded"
horizontal_alignment = 1

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Propagate"

[node name="NodedsRoot" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollContainer3" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer3/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer3/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "By SG Else script"
horizontal_alignment = 1

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer3/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Propagate"

[node name="SGsRoot" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer3/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/Header/OrganizeBtn" to="." method="_on_organize_btn_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Header/Refresh" to="." method="refresh_projects_info"]
